tests/snapshots/sfc/js/patches__v_if_with_component_props.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode } from "vue"

import PatinaPlayground from './PatinaPlayground.vue'

const show = true

export default {
  __name: 'test',
  setup(__props) {

const compiler = {}

return (_ctx, _cache) => {
  return (show)
    ? (_openBlock(), _createBlock(PatinaPlayground, {
      key: 0,
      compiler: compiler
    }, null, 8 /* PROPS */, ["compiler"]))
    : _createCommentVNode("v-if", true)
}
}

}
