tests/snapshots/sfc/js/patches__v_if_with_custom_directive_on_element.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { resolveDirective as _resolveDirective, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const showHelp = ref(true)
const helpText = ref('Help')

return (_ctx, _cache) => {
  const _directive_tooltip = _resolveDirective("tooltip")

  return (showHelp.value)
    ? _withDirectives((_openBlock(), _createElementBlock("button", { key: 0 }, "Help", 512 /* NEED_PATCH */)), [
      [_directive_tooltip, helpText.value, void 0, { noDelay: true }]
    ])
    : _createCommentVNode("v-if", true)
}
}

}
