tests/snapshots/sfc/js/patches__v_if_with_v_bind_object_spread.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 221
expression: js_output.as_str()
---
import { mergeProps as _mergeProps, openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, createTextVNode as _createTextVNode, withCtx as _withCtx } from "vue"

import { ref, computed } from 'vue'
import Button from './Button.vue'


export default {
  __name: 'test',
  setup(__props) {

const isActive = ref(true)
const buttonProps = computed(() => ({ disabled: false, type: 'primary' }))

return (_ctx, _cache) => {
  return (isActive.value)
    ? (_openBlock(), _createBlock(Button, _mergeProps({ key: 0 }, buttonProps.value, {
      onClick: _cache[0] || (_cache[0] = (...args) => (_ctx.handleClick && _ctx.handleClick(...args)))
    }), {
      default: _withCtx(() => [
        _createTextVNode(" Click me ")
      ]),
      _: 1 /* STABLE */
    }, 16 /* FULL_PROPS */))
    : _createCommentVNode("v-if", true)
}
}

}
