tests/snapshots/sfc/js/patches__v_if_with_v_model_on_input.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const show = ref(true)
const text = ref('')

return (_ctx, _cache) => {
  return (show.value)
    ? _withDirectives((_openBlock(), _createElementBlock("input", {
      key: 0,
      "onUpdate:modelValue": _cache[0] || (_cache[0] = $event => ((text).value = $event))
    }, null, 512 /* NEED_PATCH */)), [
      [_vModelText, text.value]
    ])
    : _createCommentVNode("v-if", true)
}
}

}
