tests/snapshots/sfc/js/patches__v_model_on_native_input_with_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const inputValue = ref('')

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
    "onUpdate:modelValue": _cache[0] || (_cache[0] = $event => ((inputValue).value = $event))
  }, null, 512 /* NEED_PATCH */)), [
    [_vModelText, inputValue.value]
  ])
}
}

}
