tests/snapshots/sfc/js/patches__v_model_on_select_with_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { vModelSelect as _vModelSelect, withDirectives as _withDirectives, createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("option", { value: "option1" }, "Option 1")
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("option", { value: "option2" }, "Option 2")

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const selected = ref('option1')

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("select", {
    "onUpdate:modelValue": _cache[0] || (_cache[0] = $event => ((selected).value = $event))
  }, [
    _hoisted_1,
    _hoisted_2
  ], 512 /* NEED_PATCH */)), [
    [_vModelSelect, selected.value]
  ])
}
}

}
